--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #8562c4);
+	background: linear-gradient(-45deg, #0c4bd3, #e73c7e, #23a6d5, #8562c4);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
+	margin: 25;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	color: white;
+	font-family: Arial, sans-serif;
 }
 
 @keyframes gradient {
@@ -15,4 +21,53 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+.d-flex {
+	display: flex;
+}
+
+.flex-column {
+	flex-direction: column;
+}
+
+.justify-content-center {
+	justify-content: flex-start;
+}
+
+.align-items-center {
+	align-items: center;
+}
+
+.w-100 {
+	width: 100%;
+}
+
+.h-100 {
+	height: 100%;
+	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.fw-light {
+	font-weight: 300;
+}
+
+.text-white {
+	color: white;
+}
+
+.m-0 {
+	margin: 0;
+}
+
+.ms-2 {
+	margin-left: 0.5rem;
+}
+
+.container {
+background-color: rgb(46, 45, 44);
+padding: 15%;
+opacity: 50%;
+border-radius: 5%;
+width: 800px;
 }
