--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ body {
 	font-family: Arial, sans-serif;
 	position: relative;
 	overflow: hidden;
+	background: #013d49;
+	background-image:
+	  radial-gradient(50% 30% ellipse at center top, #201e40 0%, rgba(0,0,0,0) 100%),
+	  radial-gradient(60% 50% ellipse at center bottom, #261226 0%, #100a1c 100%);
+	background-attachment: fixed;
+	color: #6cacc5;
+
 }
 
 body::before {
@@ -20,8 +27,8 @@ body::before {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: radial-gradient(circle at top left, rgba(137, 0, 186, 0.752), transparent),
-	            radial-gradient(circle at top right, rgba(158, 3, 193, 0.869), transparent),
+	background: radial-gradient(circle at top left, rgb(3, 175, 255), transparent),
+	            radial-gradient(circle at top right, rgba(0, 255, 191, 0.869), transparent),
 	            radial-gradient(circle at bottom left, rgba(0, 0, 0, 0.752), transparent),
 	            radial-gradient(circle at bottom right, rgba(0, 0, 0, 0.869), transparent);
 	opacity: 0;
@@ -90,7 +97,7 @@ body::before {
 .container {
 	background-color: rgb(59, 58, 56);
 	padding: 15%;
-	opacity: 50%;
+	opacity: 80%;
 	border-radius: 5%;
 	width: 800px;
 	position: relative;
